Split in components

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   
   */
   --cream: #f0ead2;
-  --light-brown: #9b744a;
+  --light-brown: #75a478;
   --strong-green: #75a478;
   --strong-brown: #6c584c;
   --text: #333333;
@@ -47,522 +47,9 @@ body {
   overflow: hidden;
 }
 
-/* HEADER STYLE */
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  padding: var(--size16);
-}
-
-.logo {
-  display: block;
-  height: 48px;
-  width: 48px;
-}
-
 .icon {
   display: block;
   height: 20px;
 
   cursor: pointer;
-}
-
-/*---------------*/
-
-/* BOARD STYLE */
-
-.board {
-  height: 100%;
-
-  display: flex;
-  gap: var(--size48);
-}
-
-::-webkit-scrollbar {
-  width: 5px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #ebebeb;
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-  background: #979797;
-}
-
-/*---------------*/
-
-/* Aside Style */
-
-.board__aside-open {
-  position: relative;
-  background-color: white;
-
-  flex-basis: 20%;
-  display: flex;
-  flex-direction: column;
-  gap: var(--size32);
-
-  padding: var(--size16);
-  padding-right: var(--size40);
-
-  border-top-right-radius: var(--border20);
-}
-
-.board__aside-open h2 {
-  margin-bottom: var(--size08);
-}
-
-.sidebar-handler {
-  position: absolute;
-  top: 0;
-  right: 0;
-
-  transform: translate(-50%, 50%);
-}
-
-/* CLOSED MODAL STYLES*/
-.board__aside-close {
-  position: relative;
-  background-color: white;
-
-  flex-basis: 0%;
-  display: flex;
-  align-items: center;
-
-  padding: var(--size16);
-
-  border-top-right-radius: var(--border20);
-}
-
-.sidebar-text {
-  writing-mode: vertical-lr;
-  text-orientation: sideways;
-
-  transform: rotate(180deg);
-
-  font-weight: bold;
-  font-size: 1.6rem;
-}
-/* ------------ */
-
-/* Aside Style --> Search section */
-.search-section input {
-  cursor: pointer;
-
-  width: 100%;
-
-  padding: var(--size08);
-  border: none;
-  border-radius: var(--border5);
-
-  background-color: var(--input-bg);
-
-  font: inherit;
-}
-
-.search-section input:focus-visible {
-  outline: 1px solid var(--strong-green);
-}
-
-/* Aside Style --> Filter section && Sort section*/
-
-.filter-container {
-  display: flex;
-  flex-direction: column;
-  gap: var(--size16);
-}
-
-.filter {
-  cursor: pointer;
-
-  list-style: none;
-
-  background-color: var(--input-bg);
-
-  padding: var(--size08);
-  border-radius: var(--border5);
-
-  font-weight: bold;
-}
-
-.option {
-  font-weight: normal;
-  padding-block: var(--size08);
-  padding-left: var(--size08);
-  margin-right: var(--size08);
-}
-
-.option:hover {
-  border-left: 3px solid var(--strong-green);
-  color: var(--strong-green);
-}
-
-.option:first-of-type {
-  margin-top: var(--size04);
-}
-
-.option:not(:first-of-type) {
-  border-top: 1px solid rgb(195, 195, 195);
-}
-
-.active {
-  font-weight: bold;
-  border-left: 3px solid var(--strong-green);
-  color: var(--strong-green);
-}
-
-.filter__header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-/*
-.filter__header img {
-  transform: rotate(90deg);
-}
-*/
-
-.options-container {
-  height: 10rem;
-  overflow-y: scroll;
-  margin-top: var(--size08);
-}
-
-.hidden {
-  display: none;
-}
-
-/* Aside Style --> Filter section && Sort section*/
-
-.active-filters-section {
-  display: flex;
-  flex-direction: column;
-}
-
-.active-filter p {
-  font-weight: bold;
-  margin-bottom: var(--size04);
-}
-
-.actice-filter__buttons {
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--size08);
-}
-
-.active-tag {
-  border: 2px solid var(--strong-green);
-  border-radius: var(--border10);
-  padding: var(--size04) var(--size08);
-  font-size: 0.8rem;
-  font-weight: bold;
-  color: var(--strong-green);
-}
-/*---------------*/
-
-.board__content {
-  height: 100%;
-  background-color: white;
-  flex: 1;
-  padding: var(--size16);
-  border-top-left-radius: var(--border20);
-}
-
-.recipes {
-  overflow-y: scroll;
-  height: 100%;
-  width: 100%;
-  display: grid;
-  gap: var(--size32);
-  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-
-  padding: var(--size08) var(--size08) 5rem;
-}
-
-.recipe-container {
-  cursor: pointer;
-  border-radius: var(--border10);
-  min-height: 300px;
-  max-height: 300px;
-  overflow: hidden;
-
-  text-align: center;
-
-  box-shadow: 0px 3px 5px rgb(0, 0, 0, 0.1);
-}
-
-.recipe-container img {
-  display: block;
-  height: 70%;
-  width: 100%;
-  box-shadow: 0px 3px 5px rgb(0, 0, 0, 0.1);
-  border-bottom-left-radius: var(--border10);
-  border-bottom-right-radius: var(--border10);
-}
-
-.recipe-container:hover {
-  transition: transform 0.1s ease-in-out;
-  transform: scale(98%) rotate(3deg);
-}
-
-.recipe-container p {
-  font-weight: bold;
-  padding: var(--size20);
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.recipes::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge add Firefox */
-.recipes {
-  -ms-overflow-style: none;
-  scrollbar-width: none; /* Firefox */
-}
-
-/*
-.pagination {
-  margin-top: var(--size24);
-  display: flex;
-  align-items: center;
-  gap: var(--size08);
-}
-
-.pagination span {
-  color: var(--strong-green);
-  font-weight: bold;
-}
-*/
-
-/* Recipe Detail Style*/
-
-.recipe-detail {
-  overflow-y: scroll;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: var(--size24);
-
-  padding: var(--size04);
-  padding-bottom: 5rem;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.recipe-detail::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge add Firefox */
-.recipe-detail {
-  -ms-overflow-style: none;
-  scrollbar-width: none; /* Firefox */
-}
-
-/* FIRST BLOCK - IMAGE AND SPECIFICS*/
-.recipe-block-flex {
-  display: flex;
-  gap: var(--size24);
-}
-
-.recipe-image {
-  display: block;
-  border-radius: var(--border10);
-  background-size: contain;
-}
-
-.recipe-specifics {
-  position: relative;
-  padding: var(--size16);
-  padding-bottom: var(--size24);
-  box-shadow: 0 0 3px rgb(0, 0, 0, 0.2);
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: var(--size24);
-  border-radius: var(--border10);
-  font-weight: bold;
-}
-
-.recipe-specifics a {
-  color: var(--strong-green);
-  text-decoration: none;
-  margin-left: var(--size08);
-}
-
-.tags {
-  display: flex;
-  align-items: center;
-  gap: var(--size08);
-  margin-top: auto;
-}
-
-/* SECOND BLOCK - INGREDIENTS AND NUTRIENTS*/
-
-.recipe-ingredients {
-  flex-basis: 80%;
-  box-shadow: 0 0 3px rgb(0, 0, 0, 0.2);
-  padding: var(--size16);
-  padding-bottom: var(--size24);
-
-  display: flex;
-  flex-direction: column;
-  gap: var(--size16);
-
-  border-radius: var(--border10);
-}
-
-.ingredients-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-weight: bold;
-}
-.servings {
-  display: flex;
-  align-items: center;
-  gap: var(--size04);
-}
-
-.servings-number {
-  font-size: 1.4rem;
-  color: var(--strong-green);
-}
-
-.ingredients-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  row-gap: var(--size24);
-}
-
-.ingredient {
-  flex-basis: 50%;
-  display: flex;
-  align-items: center;
-  gap: var(--size16);
-}
-
-.ingredient-image {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  height: 60px;
-  width: 60px;
-  border-radius: 50%;
-  border: 1px solid rgb(239, 239, 239);
-  overflow: hidden;
-}
-
-.ingredient-image img {
-  width: 100%;
-  display: block;
-  object-fit: cover;
-}
-.recipe-nutrients {
-  flex: 1;
-  box-shadow: 0 0 3px rgb(0, 0, 0, 0.2);
-}
-
-.recipe-nutrients {
-  padding: var(--size16);
-  padding-bottom: var(--size24);
-  height: fit-content;
-
-  display: flex;
-  flex-direction: column;
-  gap: var(--size16);
-
-  border-radius: var(--border10);
-}
-
-.recipe-nutrients h2::after {
-  content: "(Per serving)";
-  margin-left: var(--size08);
-  font-weight: normal;
-  font-size: 0.8rem;
-}
-
-.nutrient {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nutrient-name {
-  font-weight: bold;
-}
-
-.quantity {
-  font-weight: bold;
-  color: var(--strong-green);
-}
-
-/* THRID BLOCK - STEPS*/
-.recipe-block {
-  box-shadow: 0 0 3px rgb(0, 0, 0, 0.2);
-  display: flex;
-  flex-direction: column;
-  gap: var(--size24);
-  padding: var(--size16);
-
-  border-radius: var(--border10);
-}
-.step {
-  display: flex;
-  gap: var(--size16);
-}
-
-.step:not(:last-of-type) {
-  border-bottom: 1px solid gray;
-}
-
-.step p:not(.step:last-child) {
-  margin-bottom: var(--size24);
-}
-
-.step-number {
-  position: relative;
-  background-color: var(--strong-green);
-  height: 50px;
-  width: 50px;
-  border-radius: 50px;
-  flex-shrink: 0;
-}
-
-.step-number p {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  font-size: 1.6rem;
-  font-weight: bold;
-}
-
-.recommended {
-  padding-bottom: var(--size08);
-}
-
-.recommended h2 {
-  margin-bottom: var(--size16);
-}
-
-.reccommended-recipes {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: var(--size24);
-}
-
-.reccommended-recipes > div {
-  max-width: 300px;
 }
