--- a/src/styles/Aside.module.css
+++ b/src/styles/Aside.module.css
@@ -44,3 +44,50 @@
   font-weight: bold;
   font-size: 1.6rem;
 }
+
+.disable-overlay {
+  background-color: rgb(237, 237, 237, 0.75);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+
+  top: 0;
+  left: 0;
+
+  z-index: 0;
+
+  border-top-right-radius: var(--border20);
+}
+
+.disable-modal {
+  position: absolute;
+  left: 50%;
+  bottom: 50%;
+
+  transform: translate(-50%, -50%);
+  width: 90%;
+
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: rgb(255, 68, 68);
+
+  background-color: white;
+
+  padding: var(--size24) var(--size16);
+
+  border-radius: var(--border20);
+
+  box-shadow: 0 0 0.4rem rgb(0, 0, 0, 0.25);
+
+  animation: fade 0.25s ease-out;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
