--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   --strong-brown: #6c584c;
   --text: #333333;
   --input-bg: #f2f2f2;
+  --error: #ff6767;
 
   --size04: 0.25rem;
   --size08: 0.5rem;
