--- a/src/styles/Aside.module.css
+++ b/src/styles/Aside.module.css
@@ -70,7 +70,7 @@
   text-align: center;
   font-size: 1.2rem;
   font-weight: bold;
-  color: rgb(255, 68, 68);
+  color: var(--error);
 
   background-color: white;
 
