--- a/src/components/board/recipeDetail/styles/RecipeIngredients.module.css
+++ b/src/components/board/recipeDetail/styles/RecipeIngredients.module.css
@@ -1,5 +1,5 @@
 .recipe-ingredients {
-  flex-basis: 80%;
+  flex: 1;
   box-shadow: 0 0 3px rgb(0, 0, 0, 0.2);
   padding: var(--size16);
   padding-bottom: var(--size24);
