--- a/src/components/board/recipeDetail/styles/RecipeNutrients.module.css
+++ b/src/components/board/recipeDetail/styles/RecipeNutrients.module.css
@@ -1,5 +1,5 @@
 .recipe-nutrients {
-  flex: 1;
+  flex-basis: 25%;
   padding: var(--size16);
   padding-bottom: var(--size24);
   height: fit-content;
