--- a/src/components/board/styles/Recipes.module.css
+++ b/src/components/board/styles/Recipes.module.css
@@ -19,3 +19,8 @@
   -ms-overflow-style: none;
   scrollbar-width: none; /* Firefox */
 }
+
+.no-recipe-message {
+  font-weight: bold;
+  font-size: 1.2rem;
+}
