--- a/src/pages/styles/Board.module.css
+++ b/src/pages/styles/Board.module.css
@@ -22,3 +22,10 @@
   border-radius: 10px;
   background: #979797;
 }
+
+@media screen and (max-width: 1024px) {
+  .board {
+    overflow: scroll;
+    flex-direction: column;
+  }
+}
